# renovate-scheduler

./: Dockerfile  docker-entrypoint.sh  pyproject.toml  pytest.ini
scheduler/: dispatcher.py  logger.py  main.py  schedule_worker.py
tests/: test_main.py
