[tool.poetry]
name = "scheduler"
version = "0.1.0"
description = "Schedules Renovate jobs as kubernetes jobs"
authors = ["Nils Plaschke <plaschke@adobe.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pottery = "^1.3.5"
redis = "^3.5.3"
kubernetes = "^18.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
pytest-mock-resources = "^2.1.2"

[tool.poetry.scripts]
renovate-scheduler = "scheduler.main:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
